# photo_processing

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  users.json
.github/workflows/: deploy.yml
api/: auth.py  background_processor.py  dependencies.py  logging.py  main.py  task_manager.py
api/handlers/: __init__.py  auth_handler.py  processing_handler.py  task_handler.py
api/models/: auth_schemas.py  schemas.py
api/processors/: async_base.py  async_interior_processor.py  async_white_processor.py
api/repositories/: __init__.py  category_repo.py  task_repo.py  user_repo.py
api/routers/: __init__.py  admin_router.py  auth_router.py  processing_router.py
api/services/: __init__.py  auth_service.py  category_service.py  task_service.py
core/: __init__.py  config.py
data/: users.json
database/: db_session.py  models.py
database/migrations/: 001_initial_schema.sql  002_insert_categories.sql
interior/: async_ai_client.py  config.py  image_processor.py
white/: async_pixian_client.py  config.py
